# justencrypt

./: .dockerignore  .gitignore  .onedev-buildspec.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.sh
encryption/: Cargo.toml
encryption/src/: file_decryptor.rs  file_encryptor.rs  lib.rs  stream_decryptor.rs  stream_encryptor.rs
env/: justencrypt.env
src/: main.rs
src/db/: db.rs  migrations.rs  sql.rs  sqlite.rs
src/encryption/: mod.rs  stream_decryptor.rs  stream_encryptor.rs
src/enums/: db_error.rs  mod.rs  request_error.rs  request_success.rs
src/routes/: auth.rs  file.rs  folder.rs  mod.rs  session.rs  thumbnail.rs  user.rs
src/session/: app_session.rs  mod.rs  session.rs  user_session.rs
src/streaming/: encryption_streaming.rs  mod.rs  streaming.rs
src/util/: mod.rs  sharded_path.rs  unrestricted_path.rs
src/web/: fairings.rs  forwarding_guards.rs  mod.rs  responders.rs
yew/: Cargo.toml  LICENSE-MIT  README.md  index.html
yew/src/: app.rs
yew/src/app/components/: file.rs  file_viewer.rs  folder.rs  header.rs  login_form.rs  mod.rs
yew/src/app/js/requests/: file.js
yew/src/app/methods/: manifest.rs
yew/src/app/requests/: file.rs  mod.rs  session.rs
yew/styles/: index.scss
yew/styles/variables/: variables.scss
