[package]
name = "justencrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encryption = { path = "encryption" }
rocket = { version = "0.5.0", features = ['json', 'secrets', 'tls'] }
dotenv = "0.15.0"
serde = "1.0.196"
serde_json = "1.0.64"
uuid = { version = "0.8", features = ["v4"] }
secrecy = "0.8.0"