[package]
name = "justencrypt"
version = "0.1.0"
edition = "2021"
authors = ["Justin Sheaves"]
description = "A file encryption service"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encryption = { path = "encryption" }
rocket = { version = "0.5.1", features = ["json", "secrets", "tls"] }
uuid = { version = "1.8.0", features = ["v4"] }
rusqlite = { version = "0.37.0", features = [
  "bundled-sqlcipher-vendored-openssl",
] }
rusqlite_migration = "2.3.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
dotenv = "0.15.0"
serde = "1.0.202"
serde_json = "1.0.117"
secrecy = "0.8.0"
thiserror = "1.0.61"
image = "0.25.1"
log = "0.4.27"
env_logger = "0.11.8"
zxcvbn = "3.1.0"

[workspace]
members = [".", "encryption"]
