[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orion = { version = "0.17.6", features = ["safe_api"] }
tokio = { version = "1.37.0", features = ["fs", "io-util"] }
base64 = "0.22.1"
secrecy = "0.8.0"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["test-util", "macros"] }

[lib]
name = "encryption"
path = "src/lib.rs"
